--- a/app/client/dockerfile
+++ b/app/client/dockerfile
@@ -1,12 +1,15 @@
 FROM python:3.9-slim
 
+WORKDIR /xray
 
-WORKDIR /client
-
-COPY requirements.txt /client/requirements.txt
+COPY requirements.txt requirements.txt
 
 RUN pip install -r requirements.txt
 
-COPY . /client
+RUN mkdir -p app/client
 
-CMD ["fastapi", "run", "app.py", "--port", "8000"]
+COPY . /xray/app/client
+
+EXPOSE 8000
+
+CMD ["fastapi", "run", "app/client/app.py"]
